[tool.poetry]
name = "python-playground"
version = "0.1.0"
description = ""
authors = ["Guillem MC <guimarca@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.26.0"
Flask = "^2.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ruff = "^0.1.6"
mypy = "^1.7.0"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.mypy]
ignore_missing_imports = false

disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

no_implicit_optional = true
warn_return_any = true

strict_equality = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
